 package app;

import app.config.ThymeleafConfig;
import app.controllers.CupcakeController;
import app.controllers.OrderController;
import app.controllers.UserController;
import app.entities.User;
import app.persistence.ConnectionPool;
import io.javalin.Javalin;
import io.javalin.rendering.template.JavalinThymeleaf;

    public class Main
    {
        private static final String USER = "postgres";
        private static final String PASSWORD = "postgres";
        private static final String URL = "jdbc:postgresql://localhost:5432/%s?currentSchema=public";
        private static final String DB = "icy_cupcakes_database";

        private static final ConnectionPool connectionPool = ConnectionPool.getInstance(USER, PASSWORD, URL, DB);


        public static void main(String[] args)
        {
            // Initializing Javalin and Jetty webserver
            Javalin app = Javalin.create(config -> {
                config.staticFiles.add("/public");
                config.fileRenderer(new JavalinThymeleaf(ThymeleafConfig.templateEngine()));
                config.staticFiles.add("/templates");
            }).start(7070);


            // Routing
            app.get("/", ctx -> ctx.render("index.html"));

            app.before(ctx -> {
                User currentUser = ctx.sessionAttribute("currentUser");
                if (currentUser != null) {
                    ctx.attribute("user", currentUser);
                }
            });
            UserController.addRoutes(app);
            CupcakeController.addRoutes(app);
            OrderController.addRoutes(app);

        }
    }

//    will this work?