@startuml
!pragma layout smetana
'https://plantuml.com/class-diagram

title Cupcake System Class Diagram

package "controllers" {
    class CupcakeController{
    + addRoutes(app)
    - createCupcake(ctx, connectionPool)
    - getAllCupcakes(ctx)
    - getUDCById(ctx)
    - getAllBottoms(ctx, connectionPool)
    - getAllIcings(ctx, connectionPool)
    - putCupcakeInOrder(ctx, connectionPool)
    }

    class UserController{
    + addRoutes(app)
    - createUser(ctx)
    - logout()
    + login()
    }
}

package "entities" {

    class Bottom
    {
    - int bottomId
    - int bottomName
    - int bottomPrice

    + Bottom()
    + Bottom( bottomId, bottomName, bottomPrice)

    }


    class CupcakeInOrder
    {
    - int orderID
    - int udcID
    - int amount

    + CupcakeInOrder(orderID, udcID, amount)
    }

    class DiscountCode
    {
    - int discountId
    - String discountCode
    - int discount

    + DiscountCode(discountId, discountCode, discount)
    + DiscountCode()
    }

    class Icing
    {
    - int icingId
    - String icingName
    - float icingPrice

    + Icing(icingId, icingName, icingPrice)
    + Icing()
    }

    class Order
    {
    - int id
    - int userId
    - LocalDate date
    - Integer appliedDiscount

    + Order(id, userId, date, appliedDiscount)
    + Order(userId, date, appliedDiscount)
    }

    class User
    {
    - int id
    - String firstName
    - String lastName
    - int zipCode
    - String streetName
    - Integer houseNumber
    - String floor
    - String email
    - String password
    - float wallet

    + User(id, firstName, lastName, zipCode,
           streetName, houseNumber,
           floor, email, password, wallet)

    + User(id, email, password)
    }

    class UserDefinedCupcake
    {
    - Bottom bottom
    - Icing icing
    - int id

    + UserDefinedCupcake(int id, Bottom bottom, Icing icing)
    }
}

package "exceptions"
{
    class DatabaseException
    {
    + DatabaseException(userMessage)
    + DatabaseException (userMessage, systemMessage)
    }
}

package "persistence" {
    class ConnectionPool
    {
    - String DEFAULT_USER
    - String DEFAULT_PASSWORD
    - String DEFAULT_URL
    - String DEFAULT_DB
    - ConnectionPool instance
    + HikariDataSource ds

    - ConnectionPool()
    + getInstance()
    + getInstance(String user, String password, String url, String db)
    + getConnection()
    + close()
    - createHikariConnectionPool(String user, String password, String url, String db)
    }

    class CupcakeMapper
    {
    - ConnectionPool connectionPool
    - String GET_ALL_BOTTOMS
    - String GET_ALL_ICINGS


    + getALLBottoms(connectionPool)
    + getAllIcings(connectionPool)
    + getBottomById(id, connectionPool)
    + getIcingById(id, connectionPool)
    + createUserDefinedCupcakes(bottom, icing, connectionPool)
    }

    class UserMapper
    {
     + createUser(String firstName, String lastName, int zipCode,String StreetName, Integer houseNumber, String floor, String email, String Password)
     + createUser(String email, String password)
     + getUser (int id)
     + updateUser (String firstName, String lastName, int zipCode,String StreetName, Integer houseNumber, String floor, String email, String Password, float wallet)
     + deleteUser(int id)
     + login (String email, String password))
    }
}

package "config" {
class ThymeleafConfig
{
    + TemplateEngine()
}
}

class Main
{
- String USER
- String PASSWORD
- String URL
- String DB
- ConnectionPool connectionPool

+ Main()

}

' Relationships (assumptions based on naming conventions)
Main --* "controllers"
User "1" --> "many" Order
Order "1" --> "many" CupcakeInOrder
CupcakeInOrder --> UserDefinedCupcake
UserDefinedCupcake *-- Bottom
UserDefinedCupcake *-- Icing
CupcakeController --> CupcakeMapper
UserController --> UserMapper
CupcakeMapper --> ConnectionPool
UserMapper --> ConnectionPool
DiscountCode *-- Order
"persistence" --* "exceptions"

@enduml